        PR target/15550         * ifcvt.c (noce_try_move): Recognize all generated instructions.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@83395 138bc75d-0d04-0410-961f-82ee72b054a4